// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp component: Should render 1`] = `
<SignUpRenderer
  confirmPassword=""
  email=""
  error={null}
  handleChangeText={[Function]}
  handleSignUp={[Function]}
  password=""
/>
`;

exports[`SignUp component: SignUpRenderer renders when no error message 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Sign Up
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Password:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Confirm Password:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Submit"
  />
  <Button
    onPress={[Function]}
    title="Already have an account? Sign In"
  />
</Component>
`;

exports[`SignUp component: SignUpRenderer renders with error message 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Component>
    Sign Up
  </Component>
  <Component
    style={
      Object {
        "color": "red",
      }
    }
  >
    Some error occurred
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Email:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Password:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </Component>
  <Component
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Component
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Confirm Password:
    </Component>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
    />
  </Component>
  <Button
    onPress={[Function]}
    title="Submit"
  />
  <Button
    onPress={[Function]}
    title="Already have an account? Sign In"
  />
</Component>
`;
